# lagrange_cuda

./: .gitignore  CMakeLists.txt  README.md  World.cpp  World.h  common.cpp  common.h  cpu.cu  cpu.h  globals.cpp  globals.h  gpu_err_check.h  lagrange_cuda.cu  lagrange_cuda.cuh  main.cu
